# tap-workday

./: MANIFEST.in  README.md  config.json  meltano.yml  output.txt  pyproject.toml  setup.py  tap-workday.sh  tox.ini
tap_workday/: streams.py  tap.py
tap_workday/schemas/: humanresources.json
