[tool.poetry]
name = "tap-workday"
version = "0.0.1"
description = "`tap-workday` is Singer-compliant workday tap built with Singer SDK."
authors = ["Derek Visch <dvisch@autoidm.com>"]
license = "Apache v2"

[tool.poetry.dependencies]
python = "<3.11,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "0.3.17"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.poetry.group.dev.dependencies]
viztracer = "^0.15.4"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_workday"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-workday = 'tap_workday.tap:cli'
